# instagram-helper

./: .editorconfig  .env.example  .gitignore  .prettierrc  GUI_README.md  Makefile  README.md  browser_manager.py  cli.py  config.py  data_fetcher.py  demo_gui.py  gui_app.py  instagram_accounts.txt  instagram_helper.spec  instagram_scraper.py  main.py  package.json  posts_display.py  pyproject.toml  report_generator.py  requirements-dev.txt  requirements.txt  requirements_gui.txt  run.py  run_gui.py  setup-dev.sh  setup.py  start_brave_debug.bat  template.html  test_posts_display.py  utils.py
.github/workflows/: ci.yml  release.yml  test.yml
scripts/: demo_wsl2.py  launch_brave_wsl2.bat  launch_brave_wsl2.sh  setup_dev.sh  test_wsl2_detection.py
templates/: template.html  test_template.html
tests/: conftest.py  template.html  test_basic.py  test_browser_manager.py  test_config.py  test_gui_app.py  test_instagram_scraper.py  test_main.py  test_main_integration.py  test_run.py  test_utils.py
